# EPITA-42sh

./: .gitignore  .gitlab-ci.yml  Makefile.am  README  README.md  TODO  clang-format-everywhere.sh  configure.ac  doxygen.conf  flake.nix  meson.build  meson_options.txt
doc/: 42sh-grammar  42sh-grammar.md  Doxyfile.in  Makefile.am  ProjectStructure.md  SetupUbuntu20.04.md  meson.build
doc/doxygen/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  files.html  graph_legend.html  index.html  structtoken-members.html  structtoken.html  token_8h_source.html
doc/doxygen/search/: classes_0.js
src/: 42sh.c  Makefile.am  ast_dot.c  bi_alias.c  bi_cd.c  bi_continue.c  bi_echo.c  bi_exit.c  bi_export.c  bi_source.c  bi_unalias.c  bi_unset.c  builtins.c  debug.c  lexer.c  lexer_dfa.c  list.c  main.c  meson.build  parser.c  quotes.c  rl_accept.c  rl_and_or.c  rl_case.c  rl_case_clause.c  rl_case_item.c  rl_cmd.c  rl_compound_list.c  rl_do_group.c  rl_element.c  rl_else_clause.c  rl_expect.c  rl_for.c  rl_fundec.c  rl_if_clause.c  rl_input.c  rl_list.c  rl_pipeline.c  rl_prefix.c  rl_redirection.c  (+13 more)
src/ast/: ast.h  lexer.h  meson.build  parser.h  texec.h  token.def
src/include/: args.h  ast_dot.h  builtins.def  builtins.h  constants.h  ctx.h  debug.h  lexer.h  lexer_dfa.h  list.h  parser.h  printer.h  quotes.h  rule.def  rule.h  rule_exec.h  symexp.h  symtab.h  targs.h  tast.h  texec.h  token.def  token.h
src/io/: cstream.c  cstream.h  cstream_file.c  cstream_readline.c  cstream_string.c  interruptible_readline.c  interruptible_readline.h  meson.build
src/utils/: alloc.h  error.c  error.h  meson.build  strings.h  vec.c  vec.h  vec_pushstr.c
tests/: .gitignore  Makefile.am  check_coding_style  check_foo.c  e2etest.py  meson.build  run_tests
tests/functional_tests/: e2etest.py  lib.py
tests/units_tests/: bi_cd.c  bi_echo_test.c  first_test.cpp  lexer_test.cpp  meson.build  symtab.c
