include_dirs += include_directories('include')

subdir('utils')
subdir('io')
bin_sources += files('42sh.c')

all_sources += files(
    'token.c',
    'lexer_dfa.c',
    'lexer.c',
    'parser.c',
    'rl_accept.c',
    'rl_expect.c',
    'rl_input.c',
    'rl_list.c',
    'rl_and_or.c',
    'rl_pipeline.c',
    'rl_cmd.c',
    'rl_simple_cmd.c',
    'rl_shell_cmd.c',
    'rl_compound_list.c',
    'rl_if_clause.c',
    'rl_else_clause.c',
    'quotes.c',
    'ast_dot.c',
    'builtins.c',
    'bi_echo.c',
)
